style/style.scss
@import "./general";

body {
    background-image: url("../images/bg-intro-mobile.png");
    background-color: $red;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.container {
    display: flex;
    flex-direction: column;
    gap: 2.5rem;
    align-items: center;
    justify-content: center;
}

.container1 {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 90%;

    h1 {
        color: #fff;
        font-size: 1.5em;
        text-align: center;
        margin-bottom: 1rem;
        width: 13rem;
    }

    .description {
        color: #fff;
        text-align: center;
        font-size: .9em;
        width: 17.5rem;
    }
}

.container2 {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
}

.subcontainer1 {
    padding: 1rem 0;
    border-radius: 10px;
    width: 90%;
    background-color: $blue;
    color: #fff;
    display: flex;
    justify-content: center;
    text-align: center;
    font-size: .9em;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;

    span {
        font-weight: 700;
    }

    p {
        width: 10rem;;
    }
}

.subcontainer2 {
    border-radius: 10px;
    padding: 1rem 0;
    width: 90%;
    background-color: #fff;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;

    form {
        width: 80%;
        gap: 1rem;
        display: flex;
        flex-direction: column;

        .error-icon {
            width: 24px;
            position: absolute;
            right: 3%;
            top: 15%;
            opacity: 0;
        }

        input {
            padding: 0.75rem;
            border-radius: 5px;
            border: 1px solid hsl(245, 12%, 83%);
            font-family: "Poppins";
            font-weight: 600;
            color: $dark-blue;
        }

        input:focus {
            outline: 1.5px solid black;
        }

        ::placeholder {
            font-weight: 600;
            font-family: "Poppins";
            font-size: .8rem;
        }

        button {
            background-color: $green;
            border: none;
            border-radius: 5px;
            padding: 1rem 0;
            color: #fff;
            font-family: "Poppins";
            font-weight: 600;
            letter-spacing: 0.05rem;
            box-shadow: 0px 4px 0px #16a085;
        }

        button:hover {
            opacity: 80%;
            transition: opacity 0.1s ease-in-out;
        }

        .form-control {
            position: relative;
            display: flex;
            flex-direction: column;
            gap: .25rem;

            small {
                align-self: flex-end;
                font-style: italic;
                font-size: .75em;
                color: $red;
                font-weight: 600;
            }

            &.error {
                color: $red;
                input {
                    border-color: $red;
                }

                .error-icon {
                    opacity: 1;
                }
            }
        }
    }
}

    .terms {
        width: 80%;
        // color: $grayish-blue;
        color: #585086;
        text-align: center;
        font-size: .75em;

        span {
            // color: $red;
            color: #EB0000;
            font-weight: 700;
        }
    }

@media screen and (min-width: 1024px) {
    body {
        background-image: url("../images/bg-intro-desktop.png");
    }

    .container {
        flex-direction: row;
    }

    .container2 {
        width: 35%;
    }

    .container1 {
        width: 32.5%;
        
        h1 {
            text-align: start;
            align-self: flex-start;
            font-size: 3.5em;
            width: 100%;
            line-height: 1em;
        }

        .description {
            text-align: start;
            width: 85%;
            align-self: flex-start;
            font-weight: 500;
            font-size: 1em;
        }
    }

    .subcontainer1 {
        p {
            width: 100%;
        }
    }

    .subcontainer2 {
        padding: 1.5rem 0;

        form {
            gap: 1.5rem;

            input {
                padding: 1.25rem;
            }

            .error-icon {
                top: 25%;
            }
        }
    }
}

